Source/WebCore/contentextensions/NFAToDFA.h
@@ -39,7 +39,7 @@ class NFA;
 // NFAToDFA provides a way to build a DFA corresponding to a NFA.
 class NFAToDFA {
 public:
-    static DFA convert(const NFA&);
+    static DFA convert(NFA&);
 };
 
 }
